# ritzLavelyPy

./: .gitignore  LICENSE  Makefile  README.md  __init__.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  rlclass.py  search.html  searchindex.js  setup.cfg  setup.py
_modules/: index.html
_modules/ritzLavelyPy/: rlclass.html
_sources/: index.rst.txt
docs/source/: conf.py
src/: rlclass.py
src/ritzLavelyPy/: __init__.py  rlclass.py
src/ritzLavelyPy/bins/: .sample_bin.py.swp  sample_bin.py
tests/: test_poly.py
