[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ritzLavelyPy"
version = "1.0.0"
description = "Package for handling Ritzwoller-Lavely polynomials."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Samarth G Kashyap", email = "samarth.g.kashyap@outlook.com" },
]
license = { text = "MIT License" }
keywords = ["Python", "Seismology", "Solar-physics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.scripts]
sample-bin = "ritzLavelyPy.bins.sample_bin:main"

[dependency-groups]
dev = [
    "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
