[metadata]
# replace with your username:
name = samarth-kashyap
version = 0.0.4
author = Samarth G Kashyap
author_email = g.samarth@tifr.res.in
description = Package for handling Ritzwoller-Lavely polynomials.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samarth-kashyap/ritzLavelyPy
project_urls =
#    Documentation = https://ritzLavelyPy.readthedocs.io/en/latest/
#    TravisCI = https://travis-ci.com/github/samarth-kashyap/ritzLavelyPy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = Python, Seismology, Solar-physics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = numpy
tests_require = pytest
zip_safe = False

[options.extras_require]
docs = 
    sphinx 
    sphinx-rtd-theme
# tests = pytest; py

[options.entry_points]
console_scripts =
    sample-bin = ritzLavelyPy.bins.sample_bin:main

[options.packages.find]
where = src